fixed wrapping on the 'multi' object

--- a/thewebsite/assets/css/Animated-Type-Heading.css
+++ b/thewebsite/assets/css/Animated-Type-Heading.css
@@ -1,6 +1,7 @@
 .cd-words-wrapper {
-  display: inline-block;
+  display: table-row;
   position: relative;
+  /*white-space: pre-wrap;*/
   text-align: left;
   font-size: 50px;
 }
@@ -8,7 +9,7 @@
 .cd-words-wrapper b {
   display: inline-block;
   position: absolute;
-  white-space: nowrap;
+  white-space: inherit;
   left: 0;
   top: 0;
 }
@@ -38,5 +39,11 @@
 .cd-headline b.is-visible {
   opacity: 1;
   font-weight: 900;
+}
+
+@media (min-width: 370px) {
+  .cd-words-wrapper b {
+    white-space: nowrap;
+  }
 }
 
